Final edits to heading

--- a/index.html
+++ b/index.html
@@ -60,21 +60,20 @@
 
 <!-- 
     REFERENCES
-    - Rubik One font - devalparikh.github.io
 
     COLOR PALETTE
     https://colorpalettes.net/tag/pink-and-green/
-    - #213451
+    #213451
+    #a37698
 
 
-#121810
-#2f3c16
-#616244
-#a9a389
-#a6afa1
-
-    - #6e819e
-    - #d0aebc
-    - #f6f4f5
-    - #508b00
+    #121810
+    #2f3c16
+    #616244
+    #a9a389
+    #a6afa1
+    #6e819e
+    #d0aebc
+    #f6f4f5
+    #508b00
 -->
