--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="banner-heading">SAMAN</div>
 
-    <div class="banner-text">Software Engineer</div>
+    <div class="banner-text">Software Developer</div>
 
     <div class="banner-icon-group">
         <ul class="social-icon">
