--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             background-color: #2f3c16;
         }
     </style>
-
+    <script type="module" src="app.js"></script>
 </head>
 <body>
 
@@ -52,6 +52,9 @@
             </li>
             -->
         </ul>
+
+        <br><br>
+        <div id="app"></div>
     </div>
 
 
