add word button.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
             background-color: #2f3c16;
         }
     </style>
-    <script type="module" src="app.js"></script>
 </head>
 <body>
 
@@ -53,10 +52,13 @@
             -->
         </ul>
 
-        <br><br>
-        <div id="app"></div>
     </div>
-
+    
+    <div style="text-align: center; margin-top: 100px;">
+        <button onclick="window.location.href='app.html'" style="font-size: 20px; padding: 10px 20px; margin-top: 20px;">
+          Project: Word
+        </button>
+    </div>
 
 </body>
 </html>
