--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
 
     </div>
     
-    <div style="text-align: center; margin-top: 100px;">
-        <button onclick="window.location.href='app.html'" style="font-size: 20px; padding: 10px 20px; margin-top: 20px;">
-          Project: Word
-        </button>
+    <div style="text-align: left; margin-top: 100px; position: absolute; bottom: 300px; left: 10px;">
+        <a href="app.html"> Word App
+        </a>
     </div>
 
 </body>
