--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     </div>
     
-    <div style="text-align: left; margin-top: 100px; position: absolute; bottom: 300px; left: 10px;">
+    <div class="wordapp">
         <a href="app.html"> Word App
         </a>
     </div>
