--- a/app.html
+++ b/app.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to Word Definitions App</title>
+  <title>Word Definitions App</title>
 </head>
 <body>
-  <div style="text-align: center; margin-top: 100px;">
-    <h1>Welcome to the Word App</h1>
-    <a href="app.html" style="font-size: 20px; padding: 10px 20px; margin-top: 20px; text-decoration: none; color: #fff; background-color: #007bff; border-radius: 5px; padding: 10px 20px;">
-      Open App
-    </a>
-  </div>
+  <h1>Word Definitions App</h1>
+
+  <div id="app"></div>
+
+  <script src="app.js"></script>
 </body>
 </html>
