--- a/app.html
+++ b/app.html
@@ -2,14 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Word Definitions App</title>
+  <script type="module" src="app.js" defer></script>
 </head>
 <body>
-  <h1>Word Definitions App</h1>
-
   <div id="app"></div>
-
-  <script src="app.js"></script>
 </body>
 </html>
